<resources>
    <string name="app_name">MinimarketApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="categoria">Categoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ofertas">Ofertas</string>
    <string name="nuevos_productos">Nuevos Productos</string>
    <string name="mis_ordenes">Mis Ordenes</string>
    <string name="mi_carrito">Mi Carrito </string>
</resources>